clusters/games/minecraft/survive2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mc-survive2
    pod-security.kubernetes.io/enforce: privileged
    app.kubernetes.io/name: mc-survive2
  name: mc-survive2
spec:
  finalizers:
    - kubernetes
