clusters/games/minecraft/survive2/statefulset-survive2.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 10
  labels:
    run: survive2
  name: survive2
  namespace: minecraft
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: survive2
  template:
    metadata:
      labels:
        run: survive2
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: survive2-server-config
          image: itzg/minecraft-server
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - mc-health
            failureThreshold: 5
            initialDelaySeconds: 90
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 5
          name: server
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 8123
              protocol: TCP
            - containerPort: 25575
              protocol: TCP
          resources:
            requests:
              memory: "13Gi"
              cpu: "1"
            limits:
              memory: "13Gi"
              cpu: "4"
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /data
              name: server-data
        - envFrom:
            - configMapRef:
                name: backup-config-survive2
          image: itzg/mc-backup
          imagePullPolicy: Always
          name: backup
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: server-data
              readOnly: true
            - mountPath: /backups
              name: mc-backups
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /minecraft/survive2-data
            type: ""
          name: server-data
        - name: mc-backups
          # nfs:
          #   server: 192.168.96.20
          #   path: /nfs/datastore/mc-backups
          hostPath:
            path: /minecraft/mc-backups
            type: ""
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
