clusters/games/minecraft/survive2/service-survive2.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: survive2
  name: survive2
  namespace: mc-survive2
spec:
  ports:
    - name: minecraft
      port: 25565
      protocol: TCP
      targetPort: 25565
    - name: prometheus
      port: 9940
      protocol: TCP
      targetPort: 9940
    - name: dynmap
      port: 8123
      protocol: TCP
      targetPort: 8123
    - name: bluemap
      port: 8100
      protocol: TCP
      targetPort: 8100
  selector:
    run: survive2
  type: ClusterIP
